--- a/app/css/luopan.css
+++ b/app/css/luopan.css
@@ -8,9 +8,12 @@ background: #888888;
 
 .luopan {
     border: 0px solid #000000;
+    position: absolute;
+    z-index: -999;
 }
 
 .tensvg {
     margin: 0px;
-    border: 1px solid #aaaaaa;
+    border: 1px solid #ffffff;
+    position: absolute;
 }
