--- a/app/css/luopan.css
+++ b/app/css/luopan.css
@@ -16,6 +16,6 @@ background: #888888;
     margin: 0px;
     border: 1px solid #ffffff;
     position: absolute;
-    opacity: 0.5;
-    margin-left: 282.5px;
+    opacity: 0.7;
+    /* margin-left: 384px; */
 }
