--- a/app/css/luopan.css
+++ b/app/css/luopan.css
@@ -4,6 +4,7 @@ body {
 background: #888888;
 */
     padding: 5px;
+    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .luopan {
