--- a/app/css/luopan.css
+++ b/app/css/luopan.css
@@ -4,16 +4,16 @@ body {
 background: #888888;
 */
     padding: 0px;
-    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .luopan {
     z-index: -999;
+    margin-top: 0px;
 }
 
 .tensvg {
     padding: 0px;
-    margin: 0px;
     border: 1px solid #ffffff;
     position: absolute;
     opacity: 0.7;
