--- a/app/css/luopan.css
+++ b/app/css/luopan.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-    background: #000000;
+    background: #8B0000;
     padding: 0px;
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
